--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+body {
+    font-family:'Calibri', sans-serif;
+}
+
+b {
+    color: rgb(96, 111, 149);
+}
+
+i {
+    font-size: 12px;
+    line-height: 16px;
+}
+.main {
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    line-height: 28px;
+    color: #422d9f;
+}
+
+pre {
+    font-family:'Calibri', sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 500;
+}
+
+.first-text {
+    margin-left: 30px;
+    padding: 5px 10px;
+    background-color: #f5f5f5;
+    max-width: 700px;
+    height: fit-content;
+}
+
 .class {
     margin-top: 30px;
     margin-left: 30px;
