--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,18 @@ p {
 .bio-text {
     padding-top: 15px;
 }
+
+.second-text {
+    margin-left: 30px;
+    padding: 5px 10px;
+    max-width: 700px;
+    background-color: #f5f5f5;
+    height: fit-content;
+}
+
+.html-tutorial {
+    font-size: 18px;
+    line-height: 22px;
+    white-space: normal;
+}
+
