--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ pre {
     margin-left: 20px;
 }
 
-span {
+.inner span {
     margin-left: 1px;
     background-color: #dbdbdb;
     padding: 0 7px;
@@ -105,10 +105,13 @@ display: flex;
 }
 
 .program {
-    margin-left: 10px;
     padding: 5px 10px;
     max-width: 650px;
     background-color: #e3e3e3;
     height: fit-content;
 } 
 
+.menu span {
+    background-color: #e3e3e3;
+    color: rgb(47, 172, 176);
+}
