--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family:'Calibri', sans-serif;
 }
 
-b {
+.first-text b {
     color: rgb(96, 111, 149);
 }
 
@@ -27,7 +27,7 @@ pre {
 
 .first-text {
     margin-left: 30px;
-    padding: 5px 10px;
+    padding: 0 10px;
     background-color: #f5f5f5;
     max-width: 700px;
     height: fit-content;
@@ -79,7 +79,7 @@ p {
 
 .second-text {
     margin-left: 30px;
-    padding: 5px 10px;
+    padding: 5px 10px 30px 10px;
     max-width: 700px;
     background-color: #f5f5f5;
     height: fit-content;
@@ -93,7 +93,7 @@ p {
 
 .html-tutorial span {
     background-color: #e3e3e3;
-    color: red;
+    color: rgb(182, 17, 17);
     font-size: 18px;
     line-height: 22px;
 
@@ -114,4 +114,8 @@ display: flex;
 .menu span {
     background-color: #e3e3e3;
     color: rgb(47, 172, 176);
+}
+
+u {
+    text-decoration: underline dotted;
 }
