--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@ i {
     line-height: 16px;
 }
 .main {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 24px;
     line-height: 28px;
     color: #422d9f;
@@ -100,8 +99,7 @@ p {
 }
 
 h1,h2 {
-display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 .program {
