--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ p {
 
 .second-text {
     margin-left: 30px;
-    padding: 5px 10px 30px 10px;
+    padding: 5px 30px 30px 30px;
     max-width: 700px;
     background-color: #f5f5f5;
     height: fit-content;
@@ -103,12 +103,17 @@ h1,h2 {
 }
 
 .program {
-    padding: 5px 10px;
-    max-width: 650px;
+    margin-top: 10px;
+    padding: 5px 0 0 0;
+    max-width: 100vh;
+    max-height: fit-content;
     background-color: #e3e3e3;
-    height: fit-content;
+    color: rgb(182, 17, 17);
 } 
 
+.program span {
+    color:black;
+}
 .menu span {
     background-color: #e3e3e3;
     color: rgb(47, 172, 176);
